--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                 <div id="enquiredata">
                 <p id="enquire">
                     Call for General departments<br>
-                    020 3993 2193
+                    020 3993 2193<br>
+                  Email       &#x2192
                 </p>
                 </div>
                 <div id="dataform">
